# Reko

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  readme.md  statistics.md  statistics.txt
api/: Cargo.toml
api/src/: main.rs
clients/: Cargo.toml
clients/migrations/2023-09-16-120001_initialize/: down.sql  up.sql
clients/src/: lib.rs  myanimelist.rs
clients/src/database/: anime.rs  animes.rs  mod.rs  recommendations.rs  schema.rs  similar.rs  user.rs
clients/src/myanimelist/: anime.rs  list.rs  mod.rs  timer.rs
config/src/: lib.rs
docs/: readme.md
docs/api-endpoints/: readme.md
jobs/: .env.sample  Cargo.toml
jobs/src/: jobs.rs  main.rs
migrations/2022-11-12-125629_create_anime/: down.sql  up.sql
migrations/2022-11-13-135511_create_list/: down.sql  up.sql
migrations/2022-11-14-200050_create_list/: up.sql
migrations/2022-11-25-165706_create_users/: up.sql
migrations/2022-12-25-214044_create_normal_dist/: down.sql  up.sql
reko/: Cargo.toml
reko/src/: hash.rs  lib.rs  util.rs
server/: Cargo.toml
server/src/: controller.rs  main.rs  util.rs
src/: controller.rs  main.rs  router.rs
src/algorithm/: analysis.rs  mod.rs
src/algorithm/fucker/: affinity.rs  indexer.rs  init.rs  mod.rs  stats.rs  user.rs
src/algorithm/model/: affinity.rs  average.rs  deviation.rs  helper.rs  init.rs  mod.rs  stats.rs
src/algorithm/user/: affinity.rs  mod.rs  recommendation.rs  stats.rs
src/api/: anime.rs  controller.rs  headers.rs  list.rs  mod.rs  models.rs  router.rs
src/controllers/: jobs.rs  mod.rs  public.rs  test.rs
src/data/: fun.rs  mod.rs
src/data/cast/: anime.rs  generic.rs  list.rs  mod.rs
src/data/db/: anime.rs  connection.rs  fun.rs  mod.rs  schema.rs  user.rs
src/data/mal/: fun.rs  headers.rs  mod.rs
src/data/structs/: anime.rs  list.rs
src/db/: list.rs  mod.rs  models.rs  schema.rs
src/fetch/: fun.rs  mod.rs
src/fetch/cast/: anime.rs  list.rs
src/fetch/db/: connection.rs  fun.rs  mod.rs
src/fetch/mal/: fun.rs  mod.rs
src/fetch/structs/: anime.rs  list.rs
src/helper/: anime.rs  cast.rs  list.rs  mod.rs  models.rs
src/helper/database/: analysis.rs  anime.rs  mod.rs  user.rs
src/helper/mal_api/: anime.rs  list.rs  mod.rs
src/model/: base.rs  empty.rs  mod.rs
src/model/cast/: base.rs
src/models/: jobs.rs  mod.rs  recommendations.rs  stats.rs
src/models/recommendations/: affinity.rs  mod.rs
src/models/user_model/: avg.rs  calculation.rs  conversion.rs  empty.rs  gen.rs  generation.rs  init.rs  mod.rs  model_struct.rs
src/recom/: mod.rs
src/utils/: bearer.rs  benchmark.rs  conversion.rs  mal_api.rs  mod.rs  time_elapsed.rs
src/utils/conversion/: common.rs
src/utils/database/: connection.rs  mod.rs  schema.rs
src/utils/z_table/: mod.rs  table.rs
structs/: Cargo.toml
structs/src/: lib.rs  stat.rs
util/: Cargo.toml
util/src/: lib.rs
web-server/: Cargo.toml
web-server/src/: controller.rs  main.rs  util.rs
