[package]
name = "anirekome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
futures = "0.3.21"
bcrypt = "0.12"
jsonwebtoken = "8.0"
once_cell = "1.8"
tower-http = { version = "0.2", features = ["map-request-body", "util"] }
colored = "2"
reqwest = { version = "0.11.12", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"