[package]
name = "reko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
axum = { version = "0.6.1", features = ["headers", "http1", "http2", "json", "query"] }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.3.5", features = ["map-request-body", "util", "cors", "auth"] }

serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"

reqwest = { version = "0.11.12", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "extras"]}

dotenvy = "0.15"
lazy_static = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
time-elapsed = "0.1.0"


#bcrypt = "0.12"
#jsonwebtoken = "8.0"
#once_cell = "1.8"
#colored = "2"