[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clients = { path = "../clients" }
futures = "0.3.25"
tokio = { version = "1.24.0", features = ["full"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15"
