[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reko = { path = "../reko" }
clap = { version = "4.1.13", features=["derive"] }
tokio = { version = "1.24.0", features = ["full"] }
futures = "0.3.25"
