[package]
name = "server"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reko = { path = "../reko" }
structs = { path = "../structs" }
futures = "0.3.25"
tokio = { version = "1.24.0", features = ["full"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15"
axum = "0.6.20"
hyper = { version = "0.14.23", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = [
  "map-request-body",
  "util",
  "cors",
  "auth",
] }
